--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   } else {
     gapok = 5000000;
   }
-  // perhitungan tunjanganJabatan
+
+  // perhitungan tunjanganJabatan,bpjs,tunjanganKeluarga dan totalGaji
   tunjanganJabatan = gapok * (15 / 100);
   bpjs = gapok * (10 / 100);
   tunjanganKeluarga = status === "Menikah" ? gapok * (20 / 100) : 0;
