--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   } else {
     gapok = 5000000;
   }
-
-  // perhitungan tunjanganJabatan,bpjs,tunjanganKeluarga dan totalGaji
+  // perhitungan tunjanganJabatan
   tunjanganJabatan = gapok * (15 / 100);
   bpjs = gapok * (10 / 100);
   tunjanganKeluarga = status === "Menikah" ? gapok * (20 / 100) : 0;
